# RateOwl

./: .dockerignore  .env-default  .env.default  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
docs/: migrations.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: Modal.tsx  Navbar.tsx  ReviewCard.tsx  ReviewFormModal.tsx  StarRating.tsx  StarsStatic.tsx  TagBadge.tsx  TagCard.tsx  TagEditModal.tsx  TagSelector.tsx  TitleCard.tsx  TitleForm.tsx  TitleFormModal.tsx
frontend/src/context/: AuthContext.tsx  ErrorContext.tsx
frontend/src/pages/: CreateReview.tsx  Home.tsx  Login.tsx  Profile.tsx  ReviewDetails.tsx  SignUp.tsx  TagList.tsx  TitleDetails.tsx  TitleList.tsx
frontend/src/types/: index.ts
owl_core/: README.md  config.py  context.py  exceptions.py  main.py  middlewares.py
owl_core/api/: router.py
owl_core/api/reviews/: reviews_api.py
owl_core/api/tags/: tags_api.py
owl_core/api/titles/: titles_api.py
owl_core/api/users/: dependencies.py  users_api.py  utils.py
owl_core/commands/: base_command.py
owl_core/commands/reviews/: create_review.py  create_review_command.py  update_review.py
owl_core/commands/tags/: create_tag.py  (+1 more)
owl_core/daos/: base_dao.py  dependencies.py  review_dao.py  tag_dao.py  title_dao.py  user_dao.py
owl_core/db/: session.py
owl_core/migrations/: env.py
owl_core/models/: __init__.py  association_tables.py  mixins.py  reviews.py  tags.py  titles.py  users.py
owl_core/schemas/: reviews.py  tags.py  titles.py  users.py
owl_core/users/: utils.py
owl_core/views/: router.py
rate_owl/: main.py
scripts/: run_app.sh  run_tests.sh
tests/: conftest.py
tests/integration_tests/: ping_test.py
(+16 files in other folders)
